# xnbtd_ynh

./: Makefile  README.md  README_fr.md  check_process  config_panel.toml  manifest.json  manifest.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
conf/: requirements.txt  settings.py  systemd.service  urls.py
doc/: DESCRIPTION.md  DISCLAIMER.md
scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
